--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,6 @@
     "\n",
     "import sklearn\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, plot_confusion_matrix\n",
     "\n",
     "from pathlib import Path\n",
     "from IPython.display import display\n",
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -93,25 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "site = 'NAMUR'\n",
     "year = '2020'\n",
     "\n",
-    "no_data = 0\n",
-    "trees_nb = 50\n",
+    "no_data = -999\n",
     "\n",
-    "# Window size (filtering)\n",
-    "ws = 3\n",
+    "ws = 3          # Window size (filtering post classification)\n",
     "\n",
+    "# Field used for classification\n",
     "field_classif_code = 'grp_1_nb'\n",
     "field_classif_name = 'grp_1'\n",
     "\n",
+    "# Field used for reclassification\n",
     "field_reclassif_code = 'grp_A_nb'\n",
     "field_reclassif_name = 'grp_A'\n",
     "\n",
+    "# Group of features used in classification\n",
     "feat_nb = 1\n",
     "\n",
     "if feat_nb == 1:\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
     "reclassif_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}_reclassify_{field_reclassif_name}.tif'\n",
     "reclassif_filter_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}_reclassify_{field_reclassif_name}_filter_ws_{ws}.tif'\n",
     "\n",
-    "s4s_lut_xlsx   = f'{lut_path}crop_dictionary_new.xlsx'"
+    "s4s_lut_csv = f'{lut_path}crop_dictionary_new.csv'\n"
    ]
   },
   {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -180,15 +180,13 @@
     }
    ],
    "source": [
-    "img_temp_tif = glob.glob(f'{s2_path}*.tif')[0]\n",
-    "\n",
-    "print(f'Raster template file : {img_temp_tif}')\n",
-    "\n",
-    "# Open the shapefile with GeoPandas\n",
-    "\n",
+    "# Open the calibration polygons with GeoPandas\n",
     "in_situ_gdf = gpd.read_file(in_situ_cal_shp)\n",
     "\n",
     "# Open the raster file you want to use as a template for rasterize\n",
+    "img_temp_tif = glob.glob(f'{s2_path}*.tif')[0]\n",
+    "\n",
+    "print(f'Raster template file : {img_temp_tif}')\n",
     "\n",
     "src = rasterio.open(img_temp_tif, \"r\")\n",
     "\n",
@@ -234,8 +232,7 @@
     "    dst.close()\n",
     "\n",
     "else:\n",
-    "    print('CRS are different --> repoject in-situ data shapefile with \"to_crs\"')\n",
-    "\n"
+    "    print('CRS are different --> repoject in-situ data shapefile with \"to_crs\"')"
    ]
   },
   {
@@ -254,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,12 +262,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One NDVI per month"
+    "1 NDVI image per month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +275,7 @@
      "output_type": "stream",
      "text": [
       "Shape of features : (570, 986)\n",
-      "Number of features : 12\n"
+      "Number of features : 24\n"
      ]
     }
    ],
@@ -293,7 +290,7 @@
     "        im = src.read(1)\n",
     "        list_src_arr.append(im)\n",
     "        src.close()\n",
-    "\n",
+    "        \n",
     "    print(f'Shape of features : {im.shape}')\n",
     "    print(f'Number of features : {len(list_src_arr)}')\n",
     "\n",
@@ -305,12 +302,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "S1 monthly mean"
+    "S1 monthly mean composite (obtained with Google Earth Engine)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +398,8 @@
     "cal_arr = src.read(1)\n",
     "src.close()\n",
     "\n",
-    "# Find how many non-zero entries we have -- i.e. how many training data samples?\n",
-    "n_samples = (cal_arr > 0).sum()\n",
+    "# Find how many labeled entries we have -- i.e. how many training data samples?\n",
+    "n_samples = (cal_arr != no_data).sum()\n",
     "\n",
     "print(f'We have {n_samples} samples (= calibration pixels)')"
    ]
@@ -416,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +426,7 @@
     }
    ],
    "source": [
-    "labels = np.unique(cal_arr[cal_arr > 0])\n",
+    "labels = np.unique(cal_arr[cal_arr != no_data])\n",
     "\n",
     "print(f'The training data include {labels.size} classes: {labels}')"
    ]
@@ -447,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -460,11 +457,11 @@
     }
    ],
    "source": [
-    "X = feat_arr[cal_arr > 0, :]\n",
-    "y = cal_arr[cal_arr > 0]\n",
+    "X = feat_arr[cal_arr != no_data, :]\n",
+    "y = cal_arr[cal_arr != no_data]\n",
     "\n",
-    "# Replace NaN by another value\n",
-    "X = np.nan_to_num(X, nan=-10)\n",
+    "# Replace NaN in classification features by the no_data value\n",
+    "X = np.nan_to_num(X, nan=no_data)\n",
     "\n",
     "print(f'Our X matrix is sized: {X.shape}')\n",
     "print(f'Our y array is sized: {y.shape}')"
@@ -481,21 +478,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have our X 2D-matrix of feature inputs and our y 1D-matrix, we can train our model.\n",
+    "Now that we have our X 2D-matrix of feature inputs and our y 1D-matrix containing the labels, we can train our model.\n",
     "\n",
     "Visit this <a href=\"https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\" target=\"_blank\">web page</a>  to find the usage of RandomForestClassifier from scikit-learn."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest training : 00:00:10.44\n"
+      "Random Forest training : 00:00:20.84\n"
      ]
     }
    ],
@@ -503,7 +500,9 @@
     "start_training = time.time()\n",
     "\n",
     "# Initialize our model\n",
-    "rf = RandomForestClassifier(n_estimators=trees_nb, oob_score=True)\n",
+    "rf = RandomForestClassifier(n_estimators=100, # The number of trees in the forest.\n",
+    "                            bootstrap=True,   # Whether bootstrap samples are used when building trees. If False, the whole dataset is used to build each tree.\n",
+    "                            oob_score=True)   # Whether to use out-of-bag samples to estimate the generalization score. Only available if bootstrap=True.\n",
     "\n",
     "# Fit our model to training data\n",
     "rf = rf.fit(X, y)\n",
@@ -520,19 +519,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With our Random Forest model fit, we can check out the \"Out-of-Bag\" (OOB) prediction score:"
+    "With our Random Forest model fit, we can check out the \"Out-of-Bag\" (OOB) prediction score.\n",
+    "\n",
+    "> Score of the training dataset obtained using an out-of-bag estimate. This attribute exists only when oob_score is True."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our OOB prediction of accuracy is: 99.29%\n"
+      "Our OOB prediction of accuracy is: 99.39%\n"
      ]
     }
    ],
@@ -544,36 +545,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To help us get an idea of which features bands were important, we can look at the feature importance scores:"
+    "To help us get an idea of which features bands were important, we can look at the feature importance scores.\n",
+    "\n",
+    "> The impurity-based feature importances. The higher, the more important the feature. The importance of a feature is computed as the (normalized) total reduction of the criterion brought by that feature. It is also known as the Gini importance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Band 1 importance: 0.0731\n",
-      "Band 2 importance: 0.0289\n",
-      "Band 3 importance: 0.0877\n",
-      "Band 4 importance: 0.0849\n",
-      "Band 5 importance: 0.1274\n",
-      "Band 6 importance: 0.0511\n",
-      "Band 7 importance: 0.1249\n",
-      "Band 8 importance: 0.132\n",
-      "Band 9 importance: 0.0923\n",
-      "Band 10 importance: 0.0746\n",
-      "Band 11 importance: 0.0612\n",
-      "Band 12 importance: 0.0619\n"
+      "Feature 1 importance: 0.08\n",
+      "Feature 2 importance: 0.0256\n",
+      "Feature 3 importance: 0.088\n",
+      "Feature 4 importance: 0.0922\n",
+      "Feature 5 importance: 0.1236\n",
+      "Feature 6 importance: 0.0486\n",
+      "Feature 7 importance: 0.1208\n",
+      "Feature 8 importance: 0.1294\n",
+      "Feature 9 importance: 0.0935\n",
+      "Feature 10 importance: 0.0746\n",
+      "Feature 11 importance: 0.0647\n",
+      "Feature 12 importance: 0.0588\n"
      ]
     }
    ],
    "source": [
     "for band_nb, imp in enumerate(rf.feature_importances_, start=1):\n",
-    "    print(f'Band {band_nb} importance: {round(imp,4)}')"
+    "    print(f'Feature {band_nb} importance: {round(imp,4)}')"
    ]
   },
   {
@@ -585,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1188,6 +1191,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Unbelievable? I highly doubt the real confusion matrix will be 100% accuracy. What is likely going on is that we used a large number of trees within a machine learning algorithm to best figure out the pattern in our training data. Given enough information and effort, this algorithm precisely learned what we gave it. Asking to validate a machine learning algorithm on the training data is a useless exercise that will overinflate the accuracy.\n",
+    "\n",
+    "Instead, we could have done a crossvalidation approach where we train on a subset the dataset, and then predict and assess the accuracy using the sections we didn't train it on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Predict the rest of the image\n",
     "\n",
     "With our Random Forest classifier fit, we can now proceed by trying to classify the entire image."
@@ -1195,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1203,9 +1215,9 @@
      "output_type": "stream",
      "text": [
       "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:00:12.38\n",
+      "Random Forest training : 00:00:23.97\n",
       "[[   3    3   81 ...    3    3    3]\n",
-      " [   3    3    3 ...    3    3   22]\n",
+      " [   3   21    3 ...    3    3   22]\n",
       " [   3    3    3 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
@@ -1219,7 +1231,7 @@
     "\n",
     "img = feat_arr\n",
     "\n",
-    "img = np.nan_to_num(img, nan=-10)\n",
+    "img = np.nan_to_num(img, nan=no_data)\n",
     "\n",
     "new_shape = (img.shape[0] * img.shape[1], img.shape[2])\n",
     "\n",
@@ -1260,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1356,8 @@
     }
    ],
    "source": [
-    "lut_df = pd.read_excel(s4s_lut_xlsx)\n",
+    "lut_df = pd.read_csv(s4s_lut_csv, sep=';')\n",
+    "\n",
     "\n",
     "lut_df = lut_df.sort_values(by=field_classif_code, ascending=True)\n",
     "\n",
@@ -1360,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1382,7 @@
      "text": [
       "Classification : \n",
       " [[   3    3   81 ...    3    3    3]\n",
-      " [   3    3    3 ...    3    3   22]\n",
+      " [   3   21    3 ...    3    3   22]\n",
       " [   3    3    3 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
@@ -1377,7 +1390,7 @@
       " [  69   69   69 ... 1111 1111 1111]]\n",
       "Re-classification : \n",
       " [[  3   3   8 ...   3   3   3]\n",
-      " [  3   3   3 ...   3   3  22]\n",
+      " [  3  21   3 ...   3   3  22]\n",
       " [  3   3   3 ...   3  22 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
@@ -1413,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1435,7 @@
      "text": [
       "Re-classification : \n",
       " [[  3   3   8 ...   3   3   3]\n",
-      " [  3   3   3 ...   3   3  22]\n",
+      " [  3  21   3 ...   3   3  22]\n",
       " [  3   3   3 ...   3  22 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
