--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -64,18 +64,17 @@
     "computer_path = '/export/miro/ndeffense/LBRAT2104/'\n",
     "grp_letter    = 'X'\n",
     "\n",
-    "lut_path  = f'{computer_path}data/LUT/'\n",
+    "data_path = f'{computer_path}data/'                     # Directory with data shared by the assistant\n",
+    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'  # Directory for all work files\n",
     "\n",
-    "# Directory for all work files\n",
-    "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'\n",
-    "\n",
+    "# Input directories\n",
     "in_situ_path = f'{work_path}IN_SITU/'\n",
+    "s2_path      = f'{work_path}3_L2A_MASKED/'\n",
+    "ndvi_path    = f'{work_path}NDVI/'\n",
+    "s1_path      = f'{data_path}S1_GRD/'\n",
+    "lut_path     = f'{data_path}LUT/'\n",
     "\n",
-    "s2_path   = f'{work_path}3_L2A_MASKED/'\n",
-    "s1_path   = f'{work_path}S1_GRD/'\n",
-    "ndvi_path = f'{work_path}NDVI/'\n",
-    "\n",
-    "\n",
+    "# Output directory\n",
     "classif_path = f'{work_path}CLASSIF/'\n",
     "\n",
     "Path(classif_path).mkdir(parents=True, exist_ok=True)\n",
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,21 +127,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Input files"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "in_situ_cal_shp = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.shp'\n",
-    "in_situ_cal_tif = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.tif'\n",
     "\n",
-    "s1_montlhy_mean_tif = f'{s1_path}monthly_mean_{site}_{year}.tif'\n",
+    "s4s_lut_csv = f'{lut_path}crop_dictionary_new.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_situ_cal_tif = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.tif'\n",
     "\n",
     "classif_tif   = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}.tif'\n",
     "reclassif_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}_reclassify_{field_reclassif_name}.tif'\n",
-    "reclassif_filter_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}_reclassify_{field_reclassif_name}_filter_ws_{ws}.tif'\n",
-    "\n",
-    "s4s_lut_csv = f'{lut_path}crop_dictionary_new.csv'\n"
+    "reclassif_filter_tif = f'{classif_path}{site}_{year}_classif_RF_feat_{feat_nb}_{field_classif_name}_reclassify_{field_reclassif_name}_filter_ws_{ws}.tif'"
    ]
   },
   {
@@ -267,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +294,7 @@
      "output_type": "stream",
      "text": [
       "Shape of features : (570, 986)\n",
-      "Number of features : 24\n"
+      "Number of features : 12\n"
      ]
     }
    ],
@@ -307,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -320,6 +339,8 @@
    ],
    "source": [
     "if 'S1_monthly_mean' in feat_name:\n",
+    "\n",
+    "    s1_montlhy_mean_tif = f'{s1_path}monthly_mean_{site}_{year}.tif'\n",
     "\n",
     "    src = rasterio.open(s1_montlhy_mean_tif, \"r\")\n",
     "    im = src.read()\n",
@@ -345,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -485,14 +506,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest training : 00:00:20.84\n"
+      "Random Forest training : 00:00:21.34\n"
      ]
     }
    ],
@@ -526,14 +547,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our OOB prediction of accuracy is: 99.39%\n"
+      "Our OOB prediction of accuracy is: 99.36%\n"
      ]
     }
    ],
@@ -552,31 +573,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature 1 importance: 0.08\n",
-      "Feature 2 importance: 0.0256\n",
-      "Feature 3 importance: 0.088\n",
-      "Feature 4 importance: 0.0922\n",
-      "Feature 5 importance: 0.1236\n",
-      "Feature 6 importance: 0.0486\n",
-      "Feature 7 importance: 0.1208\n",
-      "Feature 8 importance: 0.1294\n",
-      "Feature 9 importance: 0.0935\n",
-      "Feature 10 importance: 0.0746\n",
-      "Feature 11 importance: 0.0647\n",
-      "Feature 12 importance: 0.0588\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feat_band</th>\n",
+       "      <th>gini</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0.128379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>0.128083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.116532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.099405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>0.094935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.091488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.077598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.075730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0.057790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.053143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0.049446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.027471</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    feat_band      gini\n",
+       "6           7  0.128379\n",
+       "7           8  0.128083\n",
+       "4           5  0.116532\n",
+       "2           3  0.099405\n",
+       "8           9  0.094935\n",
+       "3           4  0.091488\n",
+       "9          10  0.077598\n",
+       "0           1  0.075730\n",
+       "10         11  0.057790\n",
+       "11         12  0.053143\n",
+       "5           6  0.049446\n",
+       "1           2  0.027471"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "feat_band_list = []\n",
+    "gini_list      = []\n",
+    "\n",
     "for band_nb, imp in enumerate(rf.feature_importances_, start=1):\n",
-    "    print(f'Feature {band_nb} importance: {round(imp,4)}')"
+    "\n",
+    "    feat_band_list.append(band_nb)\n",
+    "    gini_list.append(imp)\n",
+    "\n",
+    "gini_dict = {'feat_band':feat_band_list,'gini':gini_list}   \n",
+    "\n",
+    "gini_df = pd.DataFrame(gini_dict).sort_values(by='gini', ascending=False)\n",
+    "\n",
+    "gini_df"
    ]
   },
   {
@@ -588,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1215,10 +1339,10 @@
      "output_type": "stream",
      "text": [
       "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:00:23.97\n",
+      "Random Forest training : 00:00:24.16\n",
       "[[   3    3   81 ...    3    3    3]\n",
-      " [   3   21    3 ...    3    3   22]\n",
-      " [   3    3    3 ...    3   22 1121]\n",
+      " [   3    3    3 ...    3    3   22]\n",
+      " [   3    3   69 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
@@ -1272,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1482,6 @@
    "source": [
     "lut_df = pd.read_csv(s4s_lut_csv, sep=';')\n",
     "\n",
-    "\n",
     "lut_df = lut_df.sort_values(by=field_classif_code, ascending=True)\n",
     "\n",
     "display(lut_df[[field_classif_code, field_classif_name, field_reclassif_code, field_reclassif_name]].head())"
@@ -1373,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1382,16 +1505,16 @@
      "text": [
       "Classification : \n",
       " [[   3    3   81 ...    3    3    3]\n",
-      " [   3   21    3 ...    3    3   22]\n",
-      " [   3    3    3 ...    3   22 1121]\n",
+      " [   3    3    3 ...    3    3   22]\n",
+      " [   3    3   69 ...    3   22 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]]\n",
       "Re-classification : \n",
       " [[  3   3   8 ...   3   3   3]\n",
-      " [  3  21   3 ...   3   3  22]\n",
-      " [  3   3   3 ...   3  22 112]\n",
+      " [  3   3   3 ...   3   3  22]\n",
+      " [  3   3   6 ...   3  22 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
       " [  6   6   6 ... 111 111 111]\n",
@@ -1426,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1435,8 +1558,8 @@
      "text": [
       "Re-classification : \n",
       " [[  3   3   8 ...   3   3   3]\n",
-      " [  3  21   3 ...   3   3  22]\n",
-      " [  3   3   3 ...   3  22 112]\n",
+      " [  3   3   3 ...   3   3  22]\n",
+      " [  3   3   6 ...   3  22 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
       " [  6   6   6 ... 111 111 111]\n",
@@ -1490,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1623,7 @@
        "       0.0, -10.0, 5596180.0), 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
