--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
     "field_reclassif_name = 'grp_A'\n",
     "\n",
     "# Group of features used in classification\n",
-    "feat_nb = 1\n",
+    "feat_nb = 2\n",
     "\n",
     "if feat_nb == 1:\n",
     "    feat_name = ['NDVI']\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -326,14 +326,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No S1 monthly mean in the set of features\n"
+      "Shape of features : (570, 986)\n",
+      "Number of features : 24\n"
      ]
     }
    ],
@@ -366,15 +367,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(570, 986, 12)\n",
-      "There are 12 features\n",
+      "(570, 986, 24)\n",
+      "There are 24 features\n",
       "The features type is : float32\n"
      ]
     }
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -465,14 +466,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our X matrix is sized: (34909, 12)\n",
+      "Our X matrix is sized: (34909, 24)\n",
       "Our y array is sized: (34909,)\n"
      ]
     }
@@ -506,14 +507,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest training : 00:00:21.34\n"
+      "Random Forest training : 00:00:30.04\n"
      ]
     }
    ],
@@ -547,14 +548,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our OOB prediction of accuracy is: 99.36%\n"
+      "Our OOB prediction of accuracy is: 99.46%\n"
      ]
     }
    ],
@@ -573,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -605,62 +606,122 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>7</td>\n",
-       "      <td>0.128379</td>\n",
+       "      <td>0.098519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>8</td>\n",
-       "      <td>0.128083</td>\n",
+       "      <td>0.096310</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>0.116532</td>\n",
+       "      <td>0.080497</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>0.099405</td>\n",
+       "      <td>0.070317</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>9</td>\n",
-       "      <td>0.094935</td>\n",
+       "      <td>0.069351</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>0.091488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0.077598</td>\n",
+       "      <td>0.066073</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.075730</td>\n",
+       "      <td>0.055116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0.053906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.050950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>11</td>\n",
-       "      <td>0.057790</td>\n",
+       "      <td>0.043805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.041479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>12</td>\n",
-       "      <td>0.053143</td>\n",
+       "      <td>0.037573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.035523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6</td>\n",
-       "      <td>0.049446</td>\n",
+       "      <td>0.029468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.028663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.025300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>0.022809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.022165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>0.027471</td>\n",
+       "      <td>0.021219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0.011463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>0.011102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0.010998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>0.009333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>0.008059</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -668,21 +729,33 @@
       ],
       "text/plain": [
        "    feat_band      gini\n",
-       "6           7  0.128379\n",
-       "7           8  0.128083\n",
-       "4           5  0.116532\n",
-       "2           3  0.099405\n",
-       "8           9  0.094935\n",
-       "3           4  0.091488\n",
-       "9          10  0.077598\n",
-       "0           1  0.075730\n",
-       "10         11  0.057790\n",
-       "11         12  0.053143\n",
-       "5           6  0.049446\n",
-       "1           2  0.027471"
+       "6           7  0.098519\n",
+       "7           8  0.096310\n",
+       "4           5  0.080497\n",
+       "2           3  0.070317\n",
+       "8           9  0.069351\n",
+       "3           4  0.066073\n",
+       "0           1  0.055116\n",
+       "17         18  0.053906\n",
+       "9          10  0.050950\n",
+       "10         11  0.043805\n",
+       "18         19  0.041479\n",
+       "11         12  0.037573\n",
+       "19         20  0.035523\n",
+       "5           6  0.029468\n",
+       "16         17  0.028663\n",
+       "15         16  0.025300\n",
+       "20         21  0.022809\n",
+       "12         13  0.022165\n",
+       "1           2  0.021219\n",
+       "14         15  0.011463\n",
+       "23         24  0.011102\n",
+       "13         14  0.010998\n",
+       "22         23  0.009333\n",
+       "21         22  0.008059"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1275,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>15</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1216,7 +1288,8 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>137</td>\n",
+       "      <td>0</td>\n",
+       "      <td>152</td>\n",
        "      <td>152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1225,7 +1298,7 @@
        "      <td>1551</td>\n",
        "      <td>124</td>\n",
        "      <td>2296</td>\n",
-       "      <td>1353</td>\n",
+       "      <td>1338</td>\n",
        "      <td>183</td>\n",
        "      <td>566</td>\n",
        "      <td>7403</td>\n",
@@ -1239,7 +1312,7 @@
        "      <td>1850</td>\n",
        "      <td>403</td>\n",
        "      <td>2059</td>\n",
-       "      <td>137</td>\n",
+       "      <td>152</td>\n",
        "      <td>34909</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1267,8 +1340,8 @@
        "1811        0     0    0     0     0    0    0     0     0     0     0     0   \n",
        "1911        0     0    0     0     0    0    0     0     0     0     0     0   \n",
        "1923        0     0    0     0     0    0    0     0     0     0     0     0   \n",
-       "9212        0     0    0     0    15    0    0     0     0     0     0     0   \n",
-       "All      5971  1551  124  2296  1353  183  566  7403  2132  1663   534  1477   \n",
+       "9212        0     0    0     0     0    0    0     0     0     0     0     0   \n",
+       "All      5971  1551  124  2296  1338  183  566  7403  2132  1663   534  1477   \n",
        "\n",
        "predict  1435  1511  1771  1811  1911  1923  9212    All  \n",
        "truth                                                     \n",
@@ -1290,8 +1363,8 @@
        "1811        0     0     0  1850     0     0     0   1850  \n",
        "1911        0     0     0     0   403     0     0    403  \n",
        "1923        0     0     0     0     0  2059     0   2059  \n",
-       "9212        0     0     0     0     0     0   137    152  \n",
-       "All      1176  1577  2454  1850   403  2059   137  34909  "
+       "9212        0     0     0     0     0     0   152    152  \n",
+       "All      1176  1577  2454  1850   403  2059   152  34909  "
       ]
      },
      "metadata": {},
@@ -1331,18 +1404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:00:24.16\n",
+      "Reshaped from (570, 986, 24) to (562020, 24)\n",
+      "Random Forest training : 00:00:24.75\n",
       "[[   3    3   81 ...    3    3    3]\n",
-      " [   3    3    3 ...    3    3   22]\n",
-      " [   3    3   69 ...    3   22 1121]\n",
+      " [   3    3    3 ...    3    3    3]\n",
+      " [   3    3   21 ...    3    3 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
@@ -1396,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1505,16 +1578,16 @@
      "text": [
       "Classification : \n",
       " [[   3    3   81 ...    3    3    3]\n",
-      " [   3    3    3 ...    3    3   22]\n",
-      " [   3    3   69 ...    3   22 1121]\n",
+      " [   3    3    3 ...    3    3    3]\n",
+      " [   3    3   21 ...    3    3 1121]\n",
       " ...\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]\n",
       " [  69   69   69 ... 1111 1111 1111]]\n",
       "Re-classification : \n",
       " [[  3   3   8 ...   3   3   3]\n",
-      " [  3   3   3 ...   3   3  22]\n",
-      " [  3   3   6 ...   3  22 112]\n",
+      " [  3   3   3 ...   3   3   3]\n",
+      " [  3   3  21 ...   3   3 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
       " [  6   6   6 ... 111 111 111]\n",
@@ -1549,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1558,14 +1631,14 @@
      "text": [
       "Re-classification : \n",
       " [[  3   3   8 ...   3   3   3]\n",
-      " [  3   3   3 ...   3   3  22]\n",
-      " [  3   3   6 ...   3  22 112]\n",
+      " [  3   3   3 ...   3   3   3]\n",
+      " [  3   3  21 ...   3   3 112]\n",
       " ...\n",
       " [  6   6   6 ... 111 111 111]\n",
       " [  6   6   6 ... 111 111 111]\n",
       " [  6   6   6 ... 111 111 111]]\n",
       "Re-classification with filter : \n",
-      " [[[  3   3   3 ...   3   3   3]\n",
+      " [[[  3   3   8 ...   3   3   3]\n",
       "  [  3   3   3 ...   3   3   3]\n",
       "  [  3   3   3 ...   3   3 112]\n",
       "  ...\n",
@@ -1613,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1696,7 @@
        "       0.0, -10.0, 5596180.0), 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1661,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
