--- a/notebooks/C_Color_Map/color_map.ipynb
+++ b/notebooks/C_Color_Map/color_map.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,30 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "field_name = 'grp_A'\n",
     "field_code = 'grp_A_nb'\n",
     "\n",
-    "filename_xlsx = f'{color_map_path}color_map_{field_name}.xlsx'\n",
+    "filename_csv = f'{color_map_path}color_map_{field_name}.csv'\n",
     "filename_clr  = f'{color_map_path}color_map_{field_name}.clr'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "field_name = 'name'\n",
-    "field_code = 'code'\n",
-    "\n",
-    "color_map_path = '/export/projects/Sen4Stat/WORK/COLOR_MAP/'\n",
-    "\n",
-    "filename_xlsx = f'{color_map_path}color_map_Nioro.xlsx'\n",
-    "filename_clr  = f'{color_map_path}color_map_Nioro.clr'"
    ]
   },
   {
@@ -92,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -116,81 +101,463 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>code</th>\n",
+       "      <th>grp_A_nb</th>\n",
        "      <th>R</th>\n",
        "      <th>G</th>\n",
        "      <th>B</th>\n",
        "      <th>T</th>\n",
-       "      <th>name</th>\n",
+       "      <th>grp_A</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>119</td>\n",
-       "      <td>16</td>\n",
+       "      <td>111</td>\n",
+       "      <td>229</td>\n",
+       "      <td>141</td>\n",
+       "      <td>140</td>\n",
        "      <td>255</td>\n",
-       "      <td>Végétation (non culture)</td>\n",
+       "      <td>Wheat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>244</td>\n",
-       "      <td>12</td>\n",
-       "      <td>26</td>\n",
-       "      <td>255</td>\n",
-       "      <td>Non végétation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>57</td>\n",
-       "      <td>197</td>\n",
-       "      <td>255</td>\n",
-       "      <td>Eau</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <td>112</td>\n",
        "      <td>230</td>\n",
        "      <td>152</td>\n",
        "      <td>0</td>\n",
        "      <td>255</td>\n",
-       "      <td>Maïs</td>\n",
+       "      <td>Maize</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>113</td>\n",
+       "      <td>254</td>\n",
+       "      <td>254</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Rice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>114</td>\n",
+       "      <td>252</td>\n",
+       "      <td>139</td>\n",
+       "      <td>7</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Sorghum</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
+       "      <td>115</td>\n",
+       "      <td>108</td>\n",
+       "      <td>158</td>\n",
+       "      <td>217</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Barley</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>116</td>\n",
+       "      <td>183</td>\n",
+       "      <td>148</td>\n",
+       "      <td>64</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Rye</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>117</td>\n",
+       "      <td>95</td>\n",
+       "      <td>196</td>\n",
+       "      <td>204</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Oats</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>118</td>\n",
        "      <td>255</td>\n",
        "      <td>255</td>\n",
        "      <td>153</td>\n",
        "      <td>255</td>\n",
-       "      <td>Mil</td>\n",
+       "      <td>Millets</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
+       "      <th>8</th>\n",
+       "      <td>119</td>\n",
+       "      <td>104</td>\n",
+       "      <td>204</td>\n",
+       "      <td>178</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Other cereals</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>121</td>\n",
+       "      <td>133</td>\n",
+       "      <td>1</td>\n",
+       "      <td>123</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Leafy or stem vegetables</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>122</td>\n",
+       "      <td>247</td>\n",
+       "      <td>71</td>\n",
+       "      <td>119</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Fruit-bearing vegetables</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>123</td>\n",
+       "      <td>149</td>\n",
+       "      <td>84</td>\n",
+       "      <td>97</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Root, bulb or tuberous vegetables</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>124</td>\n",
+       "      <td>216</td>\n",
+       "      <td>248</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Mushrooms and truffles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>141</td>\n",
+       "      <td>253</td>\n",
+       "      <td>254</td>\n",
+       "      <td>199</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Soya beans</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>142</td>\n",
        "      <td>215</td>\n",
        "      <td>158</td>\n",
        "      <td>158</td>\n",
        "      <td>255</td>\n",
-       "      <td>Arachide</td>\n",
+       "      <td>Groundnuts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>143</td>\n",
+       "      <td>120</td>\n",
+       "      <td>101</td>\n",
+       "      <td>146</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Other oilseed crops</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>151</td>\n",
+       "      <td>107</td>\n",
+       "      <td>68</td>\n",
+       "      <td>11</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Potatoes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>152</td>\n",
+       "      <td>35</td>\n",
+       "      <td>240</td>\n",
+       "      <td>155</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Sweet potatoes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>153</td>\n",
+       "      <td>108</td>\n",
+       "      <td>79</td>\n",
+       "      <td>79</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Cassava</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>154</td>\n",
+       "      <td>244</td>\n",
+       "      <td>8</td>\n",
+       "      <td>183</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Yams</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>161</td>\n",
+       "      <td>234</td>\n",
+       "      <td>110</td>\n",
+       "      <td>58</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Spice crops</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>162</td>\n",
+       "      <td>239</td>\n",
+       "      <td>200</td>\n",
+       "      <td>195</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Hops</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>17</td>\n",
+       "      <td>130</td>\n",
+       "      <td>196</td>\n",
+       "      <td>248</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Leguminous crops</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>181</td>\n",
+       "      <td>151</td>\n",
+       "      <td>113</td>\n",
+       "      <td>209</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Sugar beet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>182</td>\n",
+       "      <td>8</td>\n",
+       "      <td>112</td>\n",
+       "      <td>3</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Sugar cane</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>3</td>\n",
+       "      <td>137</td>\n",
+       "      <td>188</td>\n",
+       "      <td>31</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Grassland and meadows</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>192</td>\n",
+       "      <td>102</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Fibre crops</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1931</td>\n",
+       "      <td>255</td>\n",
+       "      <td>190</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Medicinal, aromatic, pesticidal or similar crops</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1941</td>\n",
+       "      <td>255</td>\n",
+       "      <td>253</td>\n",
+       "      <td>56</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Flowers crops</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>1991</td>\n",
+       "      <td>172</td>\n",
+       "      <td>103</td>\n",
+       "      <td>42</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Tobacco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>21</td>\n",
+       "      <td>204</td>\n",
+       "      <td>151</td>\n",
+       "      <td>5</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Fruits trees</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>22</td>\n",
+       "      <td>212</td>\n",
+       "      <td>202</td>\n",
+       "      <td>254</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Vineyards</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>23</td>\n",
+       "      <td>10</td>\n",
+       "      <td>111</td>\n",
+       "      <td>77</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Olive groves</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>24</td>\n",
+       "      <td>19</td>\n",
+       "      <td>166</td>\n",
+       "      <td>22</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Trees</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>291</td>\n",
+       "      <td>51</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Succulent plant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>5</td>\n",
+       "      <td>102</td>\n",
+       "      <td>102</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Shrub land</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>119</td>\n",
+       "      <td>16</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Forest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>7</td>\n",
+       "      <td>180</td>\n",
+       "      <td>180</td>\n",
+       "      <td>180</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Bare soil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>8</td>\n",
+       "      <td>244</td>\n",
+       "      <td>12</td>\n",
+       "      <td>26</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Build-up surface</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>57</td>\n",
+       "      <td>197</td>\n",
+       "      <td>255</td>\n",
+       "      <td>Water bodies</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   code    R    G    B    T                      name\n",
-       "0     1   14  119   16  255  Végétation (non culture)\n",
-       "1     2  244   12   26  255            Non végétation\n",
-       "2     3    9   57  197  255                       Eau\n",
-       "3     4  230  152    0  255                      Maïs\n",
-       "4     5  255  255  153  255                       Mil\n",
-       "5     6  215  158  158  255                  Arachide"
+       "    grp_A_nb    R    G    B    T  \\\n",
+       "0        111  229  141  140  255   \n",
+       "1        112  230  152    0  255   \n",
+       "2        113  254  254    0  255   \n",
+       "3        114  252  139    7  255   \n",
+       "4        115  108  158  217  255   \n",
+       "5        116  183  148   64  255   \n",
+       "6        117   95  196  204  255   \n",
+       "7        118  255  255  153  255   \n",
+       "8        119  104  204  178  255   \n",
+       "9        121  133    1  123  255   \n",
+       "10       122  247   71  119  255   \n",
+       "11       123  149   84   97  255   \n",
+       "12       124  216  248  255  255   \n",
+       "13       141  253  254  199  255   \n",
+       "14       142  215  158  158  255   \n",
+       "15       143  120  101  146  255   \n",
+       "16       151  107   68   11  255   \n",
+       "17       152   35  240  155  255   \n",
+       "18       153  108   79   79  255   \n",
+       "19       154  244    8  183  255   \n",
+       "20       161  234  110   58  255   \n",
+       "21       162  239  200  195  255   \n",
+       "22        17  130  196  248  255   \n",
+       "23       181  151  113  209  255   \n",
+       "24       182    8  112    3  255   \n",
+       "25         3  137  188   31  255   \n",
+       "26       192  102    0   51  255   \n",
+       "27      1931  255  190  255  255   \n",
+       "28      1941  255  253   56  255   \n",
+       "29      1991  172  103   42  255   \n",
+       "30        21  204  151    5  255   \n",
+       "31        22  212  202  254  255   \n",
+       "32        23   10  111   77  255   \n",
+       "33        24   19  166   22  255   \n",
+       "34       291   51  255  255  255   \n",
+       "35         5  102  102    0  255   \n",
+       "36         6   14  119   16  255   \n",
+       "37         7  180  180  180  255   \n",
+       "38         8  244   12   26  255   \n",
+       "39         9    9   57  197  255   \n",
+       "\n",
+       "                                               grp_A  \n",
+       "0                                              Wheat  \n",
+       "1                                              Maize  \n",
+       "2                                               Rice  \n",
+       "3                                            Sorghum  \n",
+       "4                                             Barley  \n",
+       "5                                                Rye  \n",
+       "6                                               Oats  \n",
+       "7                                            Millets  \n",
+       "8                                      Other cereals  \n",
+       "9                           Leafy or stem vegetables  \n",
+       "10                          Fruit-bearing vegetables  \n",
+       "11                 Root, bulb or tuberous vegetables  \n",
+       "12                            Mushrooms and truffles  \n",
+       "13                                        Soya beans  \n",
+       "14                                        Groundnuts  \n",
+       "15                               Other oilseed crops  \n",
+       "16                                          Potatoes  \n",
+       "17                                    Sweet potatoes  \n",
+       "18                                           Cassava  \n",
+       "19                                              Yams  \n",
+       "20                                       Spice crops  \n",
+       "21                                              Hops  \n",
+       "22                                  Leguminous crops  \n",
+       "23                                        Sugar beet  \n",
+       "24                                        Sugar cane  \n",
+       "25                             Grassland and meadows  \n",
+       "26                                       Fibre crops  \n",
+       "27  Medicinal, aromatic, pesticidal or similar crops  \n",
+       "28                                     Flowers crops  \n",
+       "29                                           Tobacco  \n",
+       "30                                      Fruits trees  \n",
+       "31                                         Vineyards  \n",
+       "32                                      Olive groves  \n",
+       "33                                             Trees  \n",
+       "34                                   Succulent plant  \n",
+       "35                                        Shrub land  \n",
+       "36                                            Forest  \n",
+       "37                                         Bare soil  \n",
+       "38                                  Build-up surface  \n",
+       "39                                      Water bodies  "
       ]
      },
      "metadata": {},
@@ -198,13 +565,13 @@
     }
    ],
    "source": [
-    "df = pd.read_excel(filename_xlsx, usecols=[0,1,2,3,4,5])\n",
+    "df = pd.read_csv(filename_csv, sep=';', usecols=[field_name,'R','G','B','T',field_code])\n",
     "\n",
     "df.dropna(how='all', inplace=True)\n",
     "\n",
     "df = df.astype({'R': 'int32', 'G': 'int32', 'B': 'int32', 'T': 'int32', field_code : 'int32'})\n",
     "\n",
-    "display(df)"
+    "display(df)\n"
    ]
   },
   {
